<resources>

    <string name="app_name">Test task</string>

    <!-- Title -->
    <string name="title_main">Main</string>
    <string name="title_parsing">Parsing</string>
    <string name="title_settings">Settings</string>
    <string name="title_map">Map</string>
    <string name="title_list">List</string>
    <string name="title_list_edit">Edit Item</string>
    <string name="title_list_add">Add Item</string>
    <string name="title_scaling">Scaling</string>
    <string name="title_scaling_detail">Image</string>

    <!-- Common -->
    <string name="message_loading">Loading...</string>
    <string name="warning_not_network_connection">Not network connection</string>
    <string name="warning_not_data">Not data</string>
    <string name="txt_error">Error</string>
    <string name="title_navigation_bar">The navigation bar</string>
    <string name="empty_string" translatable="false"></string>

    <!-- Main Fragment -->
    <string name="txt_map">Map</string>
    <string name="txt_parsing">Parsing</string>
    <string name="txt_scaling">Scaling</string>
    <string name="txt_list">List</string>

    <!-- Parsing Fragment -->
    <string name="text_id">Id: </string>
    <string name="text_description">Description: </string>
    <string name="text_time">Time: </string>
    <string name="text_rating">Rating: </string>

    <!-- Map Fragment -->
    <string name="text_latitude">Latitude: </string>
    <string name="text_longitude">Longitude: </string>

    <!-- Settings Fragment -->
    <string name="text_choose_language">Language:</string>
    <string name="txt_english">english</string>
    <string name="txt_russian">russian</string>
    <string name="txt_settings">settings</string>

    <!-- Scaling Fragment -->
    <string name="txt_gallery">Gallery</string>
    <string name="txt_camera">Camera</string>
    <string name="message_select_picture">Select Picture</string>

    <!-- List Detail Fragment -->
    <string name="text_edit">Edit item:</string>
    <string name="text_add">Add item:</string>
    <string name="text_hint_name">Name Item</string>
    <string name="txt_commit">Done</string>
    <string name="txt_cancel">Revert</string>

    <string name="txt_warning">Warning</string>
    <string name="txt_yes">Yes</string>
    <string name="txt_no">No</string>
    <string name="warning_message">Are you want save changes?</string>

    <string name="warning_error_name_is_empty">Enter the name of the element</string>
    <string name="message_changes_is_successfully">Changes have been successfully</string>

    <!-- Map Fragment -->
    <string name="error_geolocation">To obtain the current location is required is permission for determining the geolocation</string>
    <string name="text_current_position">Current position</string>

    <!-- List Dialog -->
    <string name="text_dialog_help">Select an action</string>
    <string name="txt_dialog_edit">Edit</string>
    <string name="txt_dialog_delete">Delete</string>

    <!-- Item Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- *********************************************************************************** -->
    <!-- ************************************** DEBUG ************************************** -->
    <!-- *********************************************************************************** -->

    <!-- Parsing Fragment -->
    <string name="text_id_val" translatable="false">Id: 60334 *********************************************************************************************************</string>
    <string name="text_description_val" translatable="false">Description: ******************************************************************************************
    ******************************************************************************************************************************************</string>
    <string name="text_time_val" translatable="false">Time: 2016-12-06 10:46:00 *****************************************************************************************</string>
    <string name="text_rating_val" translatable="false">0 *********************************************************************************************************</string>

    <!-- Map Fragment -->
    <string name="text_latitude_val" translatable="false">40.741895</string>
    <string name="text_longitude_val" translatable="false">-73.989308</string>

    <!-- List Fragment -->
    <string name="text_name" translatable="false">name ***********************************************************************************************************
    *****************************************************************************************************************************************</string>

    <!-- Item Drawer -->
    <string name="text_drawer" translatable="false">Drawer name ********************************************************************************************</string>

</resources>
