<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/frg_main_btn_map"
            style="@style/Button.MainScreen"
            android:layout_marginTop="@dimen/margin_largest"
            android:text="@string/txt_map"/>

        <Button
            android:id="@+id/frg_main_btn_parsing"
            style="@style/Button.MainScreen"
            android:text="@string/txt_parsing"/>

        <Button
            android:id="@+id/frg_main_btn_scaling"
            style="@style/Button.MainScreen"
            android:text="@string/txt_scaling"/>

        <Button
            android:id="@+id/frg_main_btn_list"
            style="@style/Button.MainScreen"
            android:layout_marginBottom="@dimen/margin_largest"
            android:text="@string/txt_list"/>

    </LinearLayout>

</ScrollView>