<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        style="@style/TextView"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/text_choose_language"/>

    <RadioGroup
        android:id="@+id/frg_settings_rg_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_normal">

        <RadioButton
            android:id="@+id/frg_settings_btn_english"
            style="@style/RadioButton"
            android:text="@string/txt_english"/>

        <RadioButton
            android:id="@+id/frg_settings_btn_russian"
            style="@style/RadioButton"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="@string/txt_russian"/>

    </RadioGroup>

</LinearLayout>