<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:card_view="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        card_view:cardCornerRadius="@dimen/card_view_corner_radius"
        card_view:cardElevation="@dimen/card_elevation">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/white"
            android:padding="@dimen/margin_normal">

            <TextView
                android:id="@+id/text_dialog_help"
                style="@style/TextView"
                android:layout_centerHorizontal="true"
                android:text="@string/text_dialog_help"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="@dimen/font_largest"/>

            <Button
                android:id="@+id/dialog_list_btn_edit"
                style="@style/Button"
                android:layout_below="@+id/text_dialog_help"
                android:layout_marginRight="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_normal"
                android:text="@string/txt_dialog_edit"/>

            <Button
                android:id="@+id/dialog_list_btn_delete"
                style="@style/Button"
                android:layout_alignTop="@+id/dialog_list_btn_edit"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_toRightOf="@+id/dialog_list_btn_edit"
                android:text="@string/txt_dialog_delete"/>
        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>